--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "dedot": "^0.0.1-alpha.39",
+    "dedot": "0.0.1-alpha.40",
     "framer-motion": "^11.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@dedot/chaintypes": "^0.0.1-alpha.155",
+    "@dedot/chaintypes": "0.0.1-alpha.157",
     "@polkadot/extension-inject": "^0.49.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
